# CMake_Demo

./: build.sh  build_project.sh  build_project_sdk.sh  build_sdk.sh  readme.txt
bin_linux/: main_binary
build_cmake_project/: CMakeCache.txt  Makefile  cmake_install.cmake
build_cmake_project_sdk/: CMakeCache.txt  Makefile  cmake_install.cmake
build_cmake_project_sdk/classA_Lib/: Makefile  cmake_install.cmake
build_cmake_project_sdk/classB_Lib/: Makefile  cmake_install.cmake
cmake_project/: CMakeLists.txt  CMakeLists.txt~  hello.cpp  main.cpp  main.cpp~
cmake_project_sdk/: CMakeLists.txt  CMakeLists.txt~
cmake_project_sdk/classA_Lib/: CMakeLists.txt
cmake_project_sdk/classA_Lib/include/: classA.h  classA.h~
cmake_project_sdk/classA_Lib/src/: classA.cpp  classA.cpp~
cmake_project_sdk/classB_Lib/: CMakeLists.txt  CMakeLists.txt~
cmake_project_sdk/classB_Lib/include/: classB.h  classB.h~
cmake_project_sdk/classB_Lib/src/: classB.cpp  classB.cpp~
